[gd_scene load_steps=10 format=3 uid="uid://clxuxmjaor3b"]

[ext_resource type="Script" path="res://addons/PlayAtCamPos/scripts/play_at_cam_pos.gd" id="1_5d5dy"]
[ext_resource type="Texture2D" uid="uid://dafpuu7i8vt7s" path="res://addons/PlayAtCamPos/icons/PlayAtCurrentPos.png" id="2_uadkw"]
[ext_resource type="Texture2D" uid="uid://coy3ehlqfc4o6" path="res://addons/PlayAtCamPos/icons/SettingsIcon.png" id="3_eb0u7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xn7l6"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_se7ya"]
bg_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vodcc"]
bg_color = Color(0.133412, 0.133388, 0.133388, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="InputEventKey" id="InputEventKey_8tauw"]
device = -1
ctrl_pressed = true
keycode = 4194337

[sub_resource type="Shortcut" id="Shortcut_arxja"]
events = [SubResource("InputEventKey_8tauw")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36icp"]
bg_color = Color(0.119835, 0.119835, 0.119835, 1)

[node name="PlayAtCamPos" type="Control"]
custom_minimum_size = Vector2(116, 32)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1036.0
offset_bottom = -616.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5d5dy")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 116.0
offset_bottom = 31.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xn7l6")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="PlayHereButton" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Play this scene at current position"
theme_override_styles/pressed = SubResource("StyleBoxFlat_se7ya")
theme_override_styles/normal = SubResource("StyleBoxFlat_vodcc")
shortcut = SubResource("Shortcut_arxja")
icon = ExtResource("2_uadkw")
flat = true
icon_alignment = 1

[node name="SettingsBtn" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
tooltip_text = "Settings"
icon = ExtResource("3_eb0u7")
flat = true
icon_alignment = 1

[node name="SettingsWindow" type="Window" parent="."]
title = "Settings"
initial_position = 1
size = Vector2i(400, 200)
visible = false
unresizable = true

[node name="PanelContainer" type="PanelContainer" parent="SettingsWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_36icp")

[node name="CenterContainer" type="CenterContainer" parent="SettingsWindow/PanelContainer"]
layout_mode = 2

[node name="Settings" type="VBoxContainer" parent="SettingsWindow/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FollowCamRotBtn" type="CheckButton" parent="SettingsWindow/PanelContainer/CenterContainer/Settings"]
layout_mode = 2
text = "Follow Camera Rotation"
alignment = 1

[node name="TargetGroup" type="HBoxContainer" parent="SettingsWindow/PanelContainer/CenterContainer/Settings"]
layout_mode = 2

[node name="TargetLabel" type="Label" parent="SettingsWindow/PanelContainer/CenterContainer/Settings/TargetGroup"]
layout_mode = 2
size_flags_horizontal = 3
text = "Target Group"

[node name="GroupName" type="LineEdit" parent="SettingsWindow/PanelContainer/CenterContainer/Settings/TargetGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player"
placeholder_text = "Group"
max_length = 20
expand_to_text_length = true
clear_button_enabled = true

[node name="ResetPosBtn" type="Button" parent="SettingsWindow/PanelContainer/CenterContainer/Settings"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Reset Camera Position"

[node name="SaveBtn" type="Button" parent="SettingsWindow/PanelContainer/CenterContainer/Settings"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[connection signal="pressed" from="PanelContainer/HBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="close_requested" from="SettingsWindow" to="." method="_on_settings_window_close_requested"]
[connection signal="toggled" from="SettingsWindow/PanelContainer/CenterContainer/Settings/FollowCamRotBtn" to="." method="_on_follow_cam_rot_btn_toggled"]
[connection signal="text_submitted" from="SettingsWindow/PanelContainer/CenterContainer/Settings/TargetGroup/GroupName" to="." method="_on_group_name_text_submitted"]
[connection signal="pressed" from="SettingsWindow/PanelContainer/CenterContainer/Settings/ResetPosBtn" to="." method="_on_reset_pos_btn_pressed"]
[connection signal="pressed" from="SettingsWindow/PanelContainer/CenterContainer/Settings/SaveBtn" to="." method="_on_save_btn_pressed"]
